# tflite

./: CMakeLists.txt  download_dependencies_v2.sh  interpreter.cc  readme.txt
java/demo/app/: build.gradle
java/src/main/java/org/tensorflow/lite/: Interpreter.java
kernels/internal/optimized/: cpu_check.h
schema/: schema_generated.h
tools/: benchmark_model_v2.cc  visualize.py
